# plenigo-python-client-gen

./: .gitignore  ISSUES.md  LICENSE  README.md  Readme.md  config.yml  generator_configs.json  openapi-v2324.json  openapi-v240627-MINOR-fixed.json  openapi-v240627-fixed.json  openapi-v240725.json  openapi-v241015-MAJOR-trimmed-down.json  openapi.json  openapi2.json  requirements.txt  trim_down_openapi_spec.py
plenigo-client/: README.md  pyproject.toml
plenigo-client/plenigo/: __init__.py  client.py  errors.py  types.py
plenigo-client/plenigo/models/: __init__.py  access_right_data.py  access_right_data_granted.py  access_right_item_base.py  access_right_item_base_data.py  access_right_item_creation.py  access_right_item_creation_data.py  access_right_item_creation_data_additional_property.py  access_right_item_data.py  access_right_item_data_access_right_data.py  access_right_item_data_access_right_data_additional_property.py  access_right_item_data_data.py  access_right_item_data_data_additional_property.py  access_right_item_data_data_item.py  access_right_item_data_granted.py  access_right_item_data_granted_data.py  access_right_item_data_granted_data_additional_property.py  access_right_item_data_granted_item_type.py  access_right_item_data_item_type.py  access_rights_data.py  active_customer_sessions.py  active_sessions.py  activities.py  activity.py  activity_activity_type.py  activity_changed_by_type.py  activity_json_object_type.py  activity_new_object.py  activity_old_object.py  activity_reason.py  additional_chain_data.py  additional_chain_data_data.py  (+734 more)
(+398 files in other folders)
