[tool.poetry]
name = "plenigo-client"
version = "0.2.3"
description = "A client library for accessing plenigo API v3"
authors = []
readme = "README.md"
packages = [
    {include = "plenigo"},
]
include = ["CHANGELOG.md", "plenigo/py.typed"]


[tool.poetry.dependencies]
python = "^3.8"
httpx = ">=0.20.0,<0.28.0"
attrs = ">=21.3.0"
python-dateutil = "^2.8.0"
tenacity = ">=8.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "I", "UP"]
